@@ -89,6 +89,15 @@
      * (download of studies, and playing videos). This option is
      * typically used by the developers of Stone.
      **/
-    "OrthancApiRoot" : ".."
+    "OrthancApiRoot" : "..",
+
+    /**
+     * If this option is set to "true", the Stone Web viewer will
+     * create DICOMDIR media archives (as generated by the route
+     * "/studies/{id}/media" of Orthanc), instead of archives
+     * containing a human-readable hierarchy of folders (as generated
+     * by the route "/studies/{id}/archive").
+     **/
+    "DownloadDicomDir" : false
   }
 }
